// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package openpitrix.frontgate;

service FrontgateService {
	rpc CloseChannel (Empty) returns (Empty);

	rpc GetConfdInfo(GetConfdInfoRequest) returns (ConfdInfo);
	rpc StartConfd (StartConfdRequest) returns (Empty);
	rpc StopConfd (StopConfdRequest) returns (Empty);

	rpc RegisterMetadata (RegisterMetadataRequest) returns (Empty);
	rpc DeregisterMetadata (DeregisterMetadataRequest) returns (Empty);

	rpc RegisterCmd (RegisterCmdRequest) returns (Empty);
	rpc DeregisterCmd (DeregisterCmdRequest) returns (Empty);

	rpc ReportSubTaskResult (SubTaskResult) returns (Empty);
}

message SubTaskResult {
	string drone_ip = 1;
	string subtask_id = 2;
	string status = 3;
}

message GetConfdInfoRequest {
	string drone_ip = 1;
}

message ConfdInfo {
	string drone_ip = 1;
	string status = 2;
}


message StartConfdRequest {
	string drone_ip = 1;
	int32 timeout_second = 2;
}

message StopConfdRequest {
	string drone_ip = 1;
	int32 timeout_second = 2;
}

message RegisterMetadataRequest {
	string drone_ip = 1;
	string frontgate_id = 2;
	string subtask_id = 3;
	int32 timeout_second = 4;
	int32 retry = 5;
}

message DeregisterMetadataRequest {
	string drone_ip = 1;
	string frontgate_id = 2;
	string subtask_id = 3;
	int32 timeout_second = 4;
	int32 retry = 5;
}

message RegisterCmdRequest {
	string drone_ip = 1;
	string frontgate_id = 2;
	string subtask_id = 3;
	int32 timeout_second = 4;
	int32 retry = 5;
}

message DeregisterCmdRequest {
	string drone_ip = 1;
	string frontgate_id = 2;
	string subtask_id = 3;
	int32 timeout_second = 4;
	int32 retry = 5;
}

message Empty {}
